--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,7 +21,7 @@ http {
     keepalive_timeout 65;
 
     upstream web {
-        server mosamatic3_web:8001;
+        server djangotemplate_web:8001;
     }
 
     server {
