--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
 
   db:
     image: postgres:16-alpine
-    container_name: djangotemplate_postgres
+    container_name: mydjangoapp_postgres
     environment:
       - POSTGRES_DB=db
       - POSTGRES_USER=root
@@ -17,46 +17,46 @@ services:
     ports:
       - 5432:5432  # Required for running Django outside Docker but using PostgreSQL
     volumes:
-      - djangotemplate_postgres_data:/var/lib/postgresql/data
+      - mydjangoapp_postgres_data:/var/lib/postgresql/data
 
   nginx:
     build: ./nginx
-    image: brecheisen/djangotemplate-nginx-intel:latest
+    image: brecheisen/mydjangoapp-nginx-intel:latest
     platform: linux/amd64
-    container_name: djangotemplate_nginx
+    container_name: mydjangoapp_nginx
     ports:
       - 8000:8000
     volumes:
-      - djangotemplate_data:/data
+      - mydjangoapp_data:/data
     depends_on:
       - web
 
   web:
     build: .
-    image: brecheisen/djangotemplate-web-intel:latest
+    image: brecheisen/mydjangoapp-web-intel:latest
     platform: linux/amd64
-    container_name: djangotemplate_web
+    container_name: mydjangoapp_web
     environment:
       - DATA_DIR=/data
       - POSTGRES_DB=db
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=foobar
-      - POSTGRES_HOST=djangotemplate_postgres # When you run Django in Docker set the host
+      - POSTGRES_HOST=mydjangoapp_postgres # When you run Django in Docker set the host
       - POSTGRES_PORT=5432
       - DOCKER=1
       - ADMIN_USER=admin
       - ADMIN_PASSWORD=admin
       - SECRET_KEY=f9sd7f97sdf89as7fd98as7d9f7sad9f
     volumes:
-      - djangotemplate_data:/data
+      - mydjangoapp_data:/data
     depends_on:
       db:
         condition: service_healthy
 
 volumes:
-  djangotemplate_data:
-  djangotemplate_postgres_data:
+  mydjangoapp_data:
+  mydjangoapp_postgres_data:
 
 networks:
   default:
-    name: djangotemplate
+    name: mydjangoapp
