--- a/mydjangoapp/pyproject.toml
+++ b/mydjangoapp/pyproject.toml
@@ -1,6 +1,6 @@
 # This project was generated with 0.3.22 using template: https://github.com/beeware/briefcase-template@v0.3.22
 [tool.briefcase]
-project_name = "Django Template"
+project_name = "My Django App"
 bundle = "com.rbeesoft"
 version = "0.0.1"
 url = "https://rbeesoft.com/djangotemplate"
@@ -8,13 +8,13 @@ license.file = "LICENSE"
 author = "Ralph Brecheisen"
 author_email = "ralph.brecheisen@gmail.com"
 
-[tool.briefcase.app.djangotemplate]
-formal_name = "Django Template"
-description = "Django Template project"
+[tool.briefcase.app.mydjangoapp]
+formal_name = "My Django App"
+description = "Template project for Django app"
 long_description = """More details about the app should go here.
 """
 sources = [
-    "src/djangotemplate",
+    "src/mydjangoapp",
 ]
 test_sources = [
     "tests",
@@ -35,18 +35,18 @@ test_requires = [
     "pytest-django",
 ]
 
-[tool.briefcase.app.djangotemplate.macOS]
+[tool.briefcase.app.mydjangoapp.macOS]
 universal_build = true
 requires = [
     # Add your macOS-specific app requirements here
 ]
 
-[tool.briefcase.app.djangotemplate.linux]
+[tool.briefcase.app.mydjangoapp.linux]
 requires = [
     # Add your Linux-specific app requirements here
 ]
 
-[tool.briefcase.app.djangotemplate.linux.system.debian]
+[tool.briefcase.app.mydjangoapp.linux.system.debian]
 system_requires = [
     # Add any system packages needed at build the app here
 ]
@@ -55,7 +55,7 @@ system_runtime_requires = [
     # Add any system packages needed at runtime here
 ]
 
-[tool.briefcase.app.djangotemplate.linux.system.rhel]
+[tool.briefcase.app.mydjangoapp.linux.system.rhel]
 system_requires = [
     # Add any system packages needed at build the app here
 ]
@@ -64,7 +64,7 @@ system_runtime_requires = [
     # Add any system packages needed at runtime here
 ]
 
-[tool.briefcase.app.djangotemplate.linux.system.suse]
+[tool.briefcase.app.mydjangoapp.linux.system.suse]
 system_requires = [
     # Add any system packages needed at build the app here
 ]
@@ -73,7 +73,7 @@ system_runtime_requires = [
     # Add any system packages needed at runtime here
 ]
 
-[tool.briefcase.app.djangotemplate.linux.system.arch]
+[tool.briefcase.app.mydjangoapp.linux.system.arch]
 system_requires = [
     # Add any system packages needed at build the app here
 ]
@@ -82,24 +82,24 @@ system_runtime_requires = [
     # Add any system packages needed at runtime here
 ]
 
-[tool.briefcase.app.djangotemplate.linux.flatpak]
+[tool.briefcase.app.mydjangoapp.linux.flatpak]
 flatpak_runtime = "org.freedesktop.Platform"
 flatpak_runtime_version = "24.08"
 flatpak_sdk = "org.freedesktop.Sdk"
 
-[tool.briefcase.app.djangotemplate.windows]
+[tool.briefcase.app.mydjangoapp.windows]
 requires = [
     # Add your Windows-specific app requirements here
 ]
 
 # Mobile deployments
-[tool.briefcase.app.djangotemplate.iOS]
+[tool.briefcase.app.mydjangoapp.iOS]
 supported = false
 
-[tool.briefcase.app.djangotemplate.android]
+[tool.briefcase.app.mydjangoapp.android]
 supported = false
 
 # Web deployments
-[tool.briefcase.app.djangotemplate.web]
+[tool.briefcase.app.mydjangoapp.web]
 supported = false
 
